# nitrokey-hotp-verification

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile.fedora  Dockerfile.ubuntu  Makefile  Makefile-repro.mk  README.md  RFC_HOTP-test-vectors.txt  base32.h  ccid.c  ccid.h  command_id.h  crc32.c  crc32.h  dev_commands.c  dev_commands.h  device.c  device.h  hotp_initialize  libremkey_hotp_initialize  main.c  meson.build  min.c  min.h  nitrokey_hotp_initialize  operations.c  operations.h  operations_ccid.c  operations_ccid.h  random_data.c  random_data.h  return_codes.c  return_codes.h  settings.h  structs.h  test_ccid.cpp  tests.mk  tlv.c  (+4 more)
.github/workflows/: c-cpp.yml
src/: ccid.c  ccid.h  command_id.h  crc32.c  crc32.h  dev_commands.c  dev_commands.h  device.c  device.h  main.c  min.c  min.h  operations.c  operations.h  operations_ccid.c  operations_ccid.h  random_data.c  random_data.h  return_codes.c  return_codes.h  settings.h  structs.h  tlv.c  tlv.h  utils.c  utils.h  version.c.in  version.h
tests/: catch_main.cpp  test_aes_regen.cpp  test_hotp.cpp
